// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`actions acceptedPricesUpdate 1`] = `
Object {
  "type": "acceptedPrices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions conversionsUpdate 1`] = `
Object {
  "type": "conversions",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions dynamoRefresh 1`] = `
Array [
  Object {
    "type": "status",
    "value": Object {
      "test": "test",
    },
  },
  Object {
    "type": "prices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
  Object {
    "type": "acceptedPrices",
    "value": Array [
      "test",
    ],
  },
  Object {
    "type": "conversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions fetchAcceptedPrices 1`] = `
Array [
  Object {
    "type": "acceptedPrices",
    "value": Array [
      "test",
    ],
  },
]
`;

exports[`actions fetchConversions 1`] = `
Array [
  Object {
    "type": "conversions",
    "value": Array [
      Object {
        "transactionHash": "aaa",
      },
      Object {
        "timestamp": 1234567890,
        "transactionHash": "bbb",
      },
    ],
  },
]
`;

exports[`actions fetchConversions 2`] = `
Object {
  "timestamp": 1234567890,
  "transactionHash": "aaa",
}
`;

exports[`actions fetchConversions 3`] = `
Object {
  "timestamp": 0,
  "transactionHash": "ccc",
}
`;

exports[`actions fetchPrices 5 1`] = `
Array [
  Object {
    "type": "prices",
    "value": Array [
      "test",
      1,
      1210567890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions fetchPrices 60 1`] = `
Array [
  Object {
    "type": "prices",
    "value": Array [
      "test",
      60,
      888967890,
      0,
      "ETH|USD",
    ],
  },
]
`;

exports[`actions pricesUpdate 1`] = `
Object {
  "type": "prices",
  "value": Array [
    "test",
  ],
}
`;

exports[`actions scanStatus 1`] = `
Array [
  Object {
    "type": "status",
    "value": Object {
      "test": "test",
    },
  },
]
`;

exports[`actions statusUpdate 1`] = `
Object {
  "type": "status",
  "value": Object {
    "test": "test",
  },
}
`;
